hphp/hack/test/typecheck/coeffects/poly_var_constructor.php.exp
File "poly_var_constructor.php", line 14, characters 7-7:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "poly_var_constructor.php", line 12, characters 24-26:
  From this declaration, the context of this function body provides the capability int
  File "poly_var_constructor.php", line 9, characters 37-41:
  But the function being called requires the capability string
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "poly_var_constructor.php", line 18, characters 7-7:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "poly_var_constructor.php", line 17, characters 24-29:
  From this declaration, the context of this function body provides the capability string
  File "poly_var_constructor.php", line 9, characters 37-41:
  But the function being called requires the capability int
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
